Fix vertical alignment of multiline Subjects in history.

--- a/html/views/history/history.css
+++ b/html/views/history/history.css
@@ -9,6 +9,10 @@ body {
 	padding-right: 5px;
 }
 
+#commit_header tr {
+        vertical-align: top;
+}
+
 #authorTable {
 	margin: -4px;
 }
